// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButtonComponent should match previous snapshot 1`] = `
<Fragment>
  <styled.input
    disabled={false}
    id="cb"
    name="rg"
    type="radio"
  />
</Fragment>
`;

exports[`RadioButtonComponent should match previous snapshot for checked state 1`] = `
<Fragment>
  <styled.input
    defaultChecked={true}
    disabled={false}
    id="cb"
    name="rg"
    type="radio"
  />
</Fragment>
`;

exports[`RadioButtonComponent should match previous snapshot for disabled state 1`] = `
<Fragment>
  <styled.input
    bg="F6F6F4"
    color="#8C8C8C"
    disabled={true}
    id="cb"
    name="rg"
    type="radio"
  />
</Fragment>
`;
